Ajusted code namespace

--- a/Class03/Views/Home/Index.cshtml
+++ b/Class03/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Aula03_EWPL1.Models.FileViewModel>
+﻿@model IEnumerable<Class03.Models.FileViewModel>
 
 @{
     ViewData["Title"] = "Index";
