--- a/Class03/Views/_ViewImports.cshtml
+++ b/Class03/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Aula03_EWPL1
-@using Aula03_EWPL1.Models
+﻿@using Class03
+@using Class03.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
