--- a/Class03/Views/Home/Index.cshtml
+++ b/Class03/Views/Home/Index.cshtml
@@ -31,7 +31,8 @@
                 @Html.DisplayFor(modelItem => item.Size)
             </td>
             <td>
-                <a asp-action="Download" asp-route-id="@item.Name" target="_blank">Download</a>
+                <a asp-action="Download" asp-route-id="@item.Name" target="_blank">Download</a> |
+                <a asp-action="Delete" asp-route-id="@item.Name">Delete</a>
                 @* @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ }) *@
